# MFLB-vineyard-navigation

./: README.md
src/end_row_navigation/: CMakeLists.txt  package.xml
src/end_row_navigation/action/: ParallelLineNavigation.action
src/end_row_navigation/cfg/: end_row_param.cfg
src/end_row_navigation/include/end_row_navigation/: client.hpp  parallel_line_navigation.hpp
src/end_row_navigation/rviz/: config.rviz  config_scout.rviz
src/end_row_navigation/src/: client.cpp  parallel_line_navigation.cpp
src/fre_row_navigation/: CMakeLists.txt  README.md  package.xml
src/fre_row_navigation/action/: CrawlRow.action
src/fre_row_navigation/cfg/: PidTester.cfg  crawl_row_param.cfg
src/fre_row_navigation/include/fre_row_navigation/: client.hpp  cone.h  crawl_row_node.h  pid.h  rectangle.h
src/fre_row_navigation/launch/: my_crawl_row.launch  my_crawl_row_real.launch  pid_tester.launch
src/fre_row_navigation/src/: client.cpp  cone.cpp  crawl_row_node.cpp  pid.cpp  pid_tester.cpp  rectangle.cpp
src/messages/: CMakeLists.txt  package.xml
src/messages/msg/: controller.msg  filtering_instr.msg  odom_comparator.msg  odom_param.msg  odom_pointcloud_sync.msg  robot_loc_comparator.msg  velocities.msg  vineyard_info.msg  wheel_velocities.msg
src/navigation/: CMakeLists.txt  package.xml
src/navigation/cfg/: filtering_param.cfg  gazebo_pid.yaml  navigation_config.yaml  navigation_controller.cfg
src/navigation/launch/: nav_end_row.launch  nav_real.launch  nav_sim.launch
src/navigation/paths/: path1.txt
src/navigation/rviz/: navigation_real.rviz
src/navigation/src/: Robot.cpp  Robot.hpp  controller.cpp  filter_node.cpp  real_handler.cpp  sim_handler.cpp
src/navigation/world/: 6rows_t1.world  6rows_t4.world  trajectory_t1.world  trajectory_t4.world  trajectory_test.world  vine_t0_no_terrain.world  vine_t0_terrain.world
src/odometry/: .cproject  .project  CMakeLists.txt  package.xml  param_calc.ods
src/odometry/cfg/: odom_param.yaml
src/odometry/include/odometry/: parameters_config.h  position.cpp  position.hpp
src/odometry/launch/: gpose_pose_conv.launch  odometry.launch  param_estimator.launch  tf_publisher.launch  tf_publisher_sim.launch
src/odometry/src/: gpose_to_pose.cpp  odom_comparator.cpp  odometry.cpp  odometry_sim.cpp  param_estimator.cpp  position.cpp  position.hpp  rpm_converter.cpp
src/pc_filters/: CMakeLists.txt  package.xml
src/pc_filters/include/pc_filters/: filters.hpp
src/pc_filters/src/: filters.cpp
src/pcl_assembler/: CMakeLists.txt  package.xml
src/pcl_assembler/action/: PclAssembler.action
src/pcl_assembler/cfg/: clustering_euclidean_param.cfg  clustering_param.cfg
src/pcl_assembler/include/: least_square.hpp
src/pcl_assembler/include/pcl_assembler/: LineModel.hpp  client.hpp  pcl_euclidean_dist.hpp  pcl_normal_filter.hpp
src/pcl_assembler/launch/: cluster.launch  cluster_real.launch
src/pcl_assembler/src/: client.cpp  least_square.cpp  pcl_euclidean_dist.cpp  pcl_normal_filter.cpp
src/speed_controller/: CMakeLists.txt  package.xml
src/speed_controller/cfg/: velocity_inputs.cfg
src/speed_controller/launch/: velocity_controller.launch
src/speed_controller/src/: velocity_publisher.cpp
src/turn/: CMakeLists.txt  package.xml
src/turn/action/: Turn.action
src/turn/cfg/: turn.cfg
src/turn/include/turn/: client.hpp  turn_action.hpp
src/turn/launch/: turn.launch
src/turn/src/: client.cpp  turn_action.cpp
