<?xml version="1.0"?>
<package format="3">
  <name>fre_row_navigation</name>
  <version>1.0.0</version>
  <description>
    This package contains the code used by Kamaro Engineering e.V. on the
    virtual Field Robot Event 2021 held from 08. to 10. June.
  </description>

  <maintainer email="mail@kamaro-engineering.de">Kamaro Engineering eV</maintainer>

  <license file="LICENSE">GPLv3</license>

  <url type="website">https://kamaro-engineering.de</url>
  <url type="github">https://github.com/Kamaro-Engineering</url>

  <author email="anton.schirg@kamaro-engineering.de">Anton Schirg</author>
  <author email="ralino96@gmail.com">Thomas Friedel</author>
  <author email="bierjou@gmail.com">Johannes Bier</author>
  <author email="johannes.barthel@kamaro-engineering.de">Johannes Barthel</author>
  <author email="livilis.os@gmail.com">Olivia Schwertfeger</author>
  <author email="l.tuschla@gmail.com">Leon Tuschla</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>laser_geometry</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>messages</build_depend>
  
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>dynamic_reconfigure</exec_depend>
  <exec_depend>actionlib_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>pcl_ros</exec_depend>
  <exec_depend>laser_geometry</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>actionlib</exec_depend>
  <exec_depend>messages</exec_depend>

  <export>
    <!-- Other tools can request additional information be placed here -->
		<cpp cflags="-I${prefix}/include" lflags="-L${prefix}/lib -lfre_row_navigation"/> 
  </export>


</package>
